@@ -1,6 +1,6 @@
 #if !defined(lint) && !defined(__INSIGHT__)
 #include "libbk_compiler.h"
-UNUSED static const char libbk__rcsid[] = "$Id: b_netutils.c,v 1.29 2004/07/08 04:40:17 lindauer Exp $";
+UNUSED static const char libbk__rcsid[] = "$Id: b_netutils.c,v 1.30 2004/07/09 16:22:10 jtt Exp $";
 UNUSED static const char libbk__copyright[] = "Copyright (c) 2003";
 UNUSED static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -664,7 +664,7 @@ bk_netutils_make_conn_verbose(bk_s B, struct bk_run *run, const char *rurl, cons
 
   if (!deflhost) deflhost = BK_ADDR_ANY;
   if (!deflserv) deflserv = "0";
-  if (!defproto) defproto = "tcp";
+  if (!defproto) defproto = rprotostr;
 
   /* Convert NULL to a real empty url */
   if (!lurl)
